chore: 기타 코드 정리 및 리팩토링
- README 업데이트
- 불필요한 import 제거
- 코드 포맷팅 정리
- 메시징 리스너 및 매퍼 클래스 정리